Started Exercise for HTML Elements.

--- a/html/welcome.html
+++ b/html/welcome.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HTML Introduction</title>
+    <title>Veridian Dynamics!</title>
 </head>
 <body>
-    <p>Hello World!</p>
+    <h1>Welcome to Veridian Dynamics!</h1>
+    <p>
+        At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong>
+    </p>
+    <div style="border-top: 1px solid black; border-bottom: 1px solid black">
+        <h2>Core Values</h2>
+        <ul>
+            <li>Competence</li>
+            <li>Involvement</li>
+            <li>Technology</li>
+        </ul>
+    </div>
 </body>
 </html>
