Updated images for first exercise for html elements.

--- a/html/welcome.html
+++ b/html/welcome.html
@@ -31,10 +31,10 @@
     <div>
         <h2>Company Vision</h2>
         <img src="https://images.pexels.com/photos/3183172/pexels-photo-3183172.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Business Meeting">
-        <img src="https://images.pexels.com/photos/3217911/pexels-photo-3217911.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Explore">
+        <img src="https://images.pexels.com/photos/7192678/pexels-photo-7192678.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Conquer">
         <br>
         <img src="https://images.pexels.com/photos/1212600/pexels-photo-1212600.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Sunset">
-        <img src="https://images.pexels.com/photos/3184418/pexels-photo-3184418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Teamwork">
+        <img src="https://images.pexels.com/photos/3194519/pexels-photo-3194519.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Teamwork">
         <h2>Our Product</h2>
         <table>
             <tr>
