Changed <p></p> tags to <div></div> tags under the images in the article part of the page layout.

--- a/html/github.html
+++ b/html/github.html
@@ -35,23 +35,23 @@
                 </tr>
             </table>
             <img src="https://fer-uig.glitch.me" alt="user-icon" /><a href="#image">Dev Team Member</a><br>
-            <p>
+            <div>
                 Dev Team Member<br>
                 Member<br>
                 X Team Members<br>
-            </p>
+            </div>
             <img src="https://fer-uig.glitch.me" alt="user-icon" /><a href="#image">Dev Team Member</a><br>
-            <p>
+            <div>
                 Dev Team Member<br>
                 Member<br>
                 X Team Members<br>
-            </p>
+            </div>
             <img src="https://fer-uig.glitch.me" alt="user-icon" /><a href="#image">Dev Team Member</a><br>
-            <p>
+            <div>
                 Dev Team Member<br>
                 Member<br>
                 X Team Members<br>
-            </p>
+            </div>
         </article>
     <footer>
         <div>
