Started working on CSS Selectors & Properties Exercises.

--- a/html/welcome.html
+++ b/html/welcome.html
@@ -7,36 +7,38 @@
 </head>
 <body>
     <h1 id="top" class="fancy-header">Welcome to Veridian Dynamics!</h1>
-    <p>
+    <p class="intro">
         At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong>
     </p>
-    <div style="border-top: 1px solid black; border-bottom: 1px solid black">
-        <h2>Core Values</h2>
+    <div class="image" style="border-top: 1px solid black; border-bottom: 1px solid black">
+        <h2 class="h2-headers">Core Values</h2>
         <ul>
             <li>Competence</li>
             <li>Involvement</li>
             <li>Technology</li>
         </ul>
-        <h2>Our Process</h2>
+        <h2 class="h2-headers">Our Process</h2>
         <ol>
             <li>Plan</li>
             <li>Evaluate</li>
             <li>Implement</li>
         </ol>
-        <h2>2020 Vision</h2>
-        <li>Become #1 in Technology</li>
-        <li>Increase Success by 20%</li>
-        <li>Increase Business by 30%</li>
+        <h2 class="h2-headers">2020 Vision</h2>
+        <ul>
+            <li>Become #1 in Technology</li>
+            <li>Increase Success by 20%</li>
+            <li>Increase Business by 30%</li>
+        </ul>
         <br>
     </div>
     <div>
-        <h2>Company Vision</h2>
+        <h2 class="h2-headers">Company Vision</h2>
         <img src="https://images.pexels.com/photos/3183172/pexels-photo-3183172.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Business Meeting">
         <img src="https://images.pexels.com/photos/7192678/pexels-photo-7192678.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Conquer">
         <br>
         <img src="https://images.pexels.com/photos/1212600/pexels-photo-1212600.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Sunset">
         <img src="https://images.pexels.com/photos/3194519/pexels-photo-3194519.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Teamwork">
-        <h2>Our Product</h2>
+        <h2 class="h2-headers">Our Product</h2>
         <table>
             <tr>
                 <th>Plan</th>
