Completed CSS Selectors & Properties Exercises.

--- a/html/welcome.html
+++ b/html/welcome.html
@@ -11,19 +11,19 @@
         At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong>
     </p>
     <div class="image" style="border-top: 1px solid black; border-bottom: 1px solid black">
-        <h2 class="h2-headers">Core Values</h2>
+        <h2 class="h2-headers h2-align">Core Values</h2>
         <ul>
             <li>Competence</li>
             <li>Involvement</li>
             <li>Technology</li>
         </ul>
-        <h2 class="h2-headers">Our Process</h2>
+        <h2 class="h2-headers h2-align">Our Process</h2>
         <ol>
             <li>Plan</li>
             <li>Evaluate</li>
             <li>Implement</li>
         </ol>
-        <h2 class="h2-headers">2020 Vision</h2>
+        <h2 class="h2-headers h2-align">2020 Vision</h2>
         <ul>
             <li>Become #1 in Technology</li>
             <li>Increase Success by 20%</li>
@@ -39,7 +39,7 @@
         <img src="https://images.pexels.com/photos/1212600/pexels-photo-1212600.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Sunset">
         <img src="https://images.pexels.com/photos/3194519/pexels-photo-3194519.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Teamwork">
         <h2 class="h2-headers">Our Product</h2>
-        <table>
+        <table class="table-center table-border">
             <tr>
                 <th>Plan</th>
                 <th>Price</th>
