Left off trying to have the text under the chili images be inline with its designated image.

--- a/html/in-class-chili-website-exercise.html
+++ b/html/in-class-chili-website-exercise.html
@@ -10,52 +10,77 @@
 </head>
 <body>
     <header>
-        <h1>The Ultimate Chili Website</h1>
+        <h1 class="h1-header">The Ultimate Chili Spot!</h1>
     </header>
 
-    <section>
+    <section class="image">
         <!--chili types-->
-        <h2>section one</h2>
-
+        <h2>Chili Types:</h2>
         <div>
-            chili type one
+            Chili Con Carne
         </div>
         <div>
-            chili type two
+            White Chili
         </div>
         <div>
-            chili type three
+            Black Bean Chili
         </div>
         <div>
-            chili type four
+            Chili Verde
         </div>
-    </section>
 
         <!--pictures of chili // fun chili names-->
-    <section>
         <div>
-            <h2>section two</h2>
+            <h2>Names of Chili:</h2>
+        </div>
+        <div>
+            Girl on Fire Chili
+        </div>
+        <div>
+            Gator Chili
+        </div>
+        <div>
+            Mean Mama Chili
+        </div>
+        <div>
+            Hillbilly Chili
         </div>
     </section>
 
     <section>
         <!--combos of chili // fun chili facts-->
-        <h2>section three</h2>
-        <ul>
-            <li>fact number one</li>
-            <li>fact number two</li>
-            <li>fact number three</li>
-        </ul>
-    </section>
-
-    <section>
-        <!--chili reaction // red hot chili peppers -->
-        <h2>section four</h2>
+        <h2>Chili Facts:</h2>
+        <h3>How did Chili Get its Name?</h3>
+        <p>
+            That it was named after Chile, South America by local people sympathetic to its cause during Chile's struggle for independence. The name Chile was somehow mispronounced and called Chili.
+        </p>
+        <h3>Where did Chili Originate?</h3>
+        <p>
+            The modern dish we know as chili, also known as chili con carne (chili with meat), does appear to have roots in the American West, particularly the State of Texas. An old legend holds that immigrants from the Canary Islands brought a recipe for chili with them when they settled San Antonio in the early 1700s.
+        </p>
+        <h3>What is the World's Hottest Chili?</h3>
+        <p>
+            Hormel has deemed their Ghost Reaper Chili the hottest chili in the world!
+        </p>
     </section>
 
     <section>
         <!--recipes-->
-        <h2>section five</h2>
+        <h2>Chili Recipes:</h2>
+        <div>
+            <img class="chili-image" src="https://assets.epicurious.com/photos/5bd79845beb1821bea8db9db/1:1/w_1920%2Cc_limit/Instant-Pot-Beef-and-Sweet-Potato-Chili-23102018.jpg">
+            <img class="chili-image" src="https://assets.epicurious.com/photos/5a5fc8563031cf2ee97a29f8/1:1/w_1920%2Cc_limit/beef-chili-recipe-BA-011718.jpg">
+            <img class="chili-image" src="https://assets.epicurious.com/photos/5a049a81f819553e017bd97f/1:1/w_1920%2Cc_limit/google-express-Bean-Chili-110317.jpg"><br>
+                <span class="sweet-chili">
+                    Sweet potatoes almost melt as they cook under pressure in the Instant Pot, lending a silky texture and sweet flavor to this harissa-spiced chili.
+                </span>
+                <span class="beef-chili">
+                    Skip that dusty bottle of chili powder. Instead, soak and purée whole dried chiles to stir into this authentic Texas beef stew.
+                </span>
+                <span class="bean-chili">
+                    With the help of a few pantry staples, you can get all the flavors of slow-simmered chili in just 30 minutes.
+                </span>
+        </div>
     </section>
 
     <footer>
