Updated and added to Chili Website Exercise for CSS practice.

--- a/html/in-class-chili-website-exercise.html
+++ b/html/in-class-chili-website-exercise.html
@@ -66,20 +66,25 @@
 
     <section>
         <!--recipes-->
-        <h2>Chili Recipes:</h2>
+        <h2 style="font-size:75px;text-decoration:underline">Chili Recipes</h2>
         <div>
-            <img class="chili-image" src="https://assets.epicurious.com/photos/5bd79845beb1821bea8db9db/1:1/w_1920%2Cc_limit/Instant-Pot-Beef-and-Sweet-Potato-Chili-23102018.jpg">
-            <img class="chili-image" src="https://assets.epicurious.com/photos/5a5fc8563031cf2ee97a29f8/1:1/w_1920%2Cc_limit/beef-chili-recipe-BA-011718.jpg">
-            <img class="chili-image" src="https://assets.epicurious.com/photos/5a049a81f819553e017bd97f/1:1/w_1920%2Cc_limit/google-express-Bean-Chili-110317.jpg"><br>
-                <span class="sweet-chili">
-                    Sweet potatoes almost melt as they cook under pressure in the Instant Pot, lending a silky texture and sweet flavor to this harissa-spiced chili.
-                </span>
-                <span class="beef-chili">
-                    Skip that dusty bottle of chili powder. Instead, soak and purée whole dried chiles to stir into this authentic Texas beef stew.
-                </span>
-                <span class="bean-chili">
-                    With the help of a few pantry staples, you can get all the flavors of slow-simmered chili in just 30 minutes.
-                </span>
+            <table class="chili-table">
+                <tr>
+                    <th>Sweet Potato Chili:</th>
+                    <th>Beef Chili:</th>
+                    <th>Vegetarian Three Bean Chili:</th>
+                </tr>
+                <tr>
+                    <td><a href="https://www.epicurious.com/recipes/food/views/instant-pot-beef-and-sweet-potato-chili" target="_blank"><img class="chili-image" src="https://assets.epicurious.com/photos/5bd79845beb1821bea8db9db/1:1/w_1920%2Cc_limit/Instant-Pot-Beef-and-Sweet-Potato-Chili-23102018.jpg" alt="Sweet Chili"></a></td>
+                    <td><a href="https://www.epicurious.com/recipes/food/views/beef-chili" target="_blank"><img class="chili-image" src="https://assets.epicurious.com/photos/5a5fc8563031cf2ee97a29f8/1:1/w_1920%2Cc_limit/beef-chili-recipe-BA-011718.jpg" alt="Beef Chili"></a></td>
+                    <td><a href="https://www.epicurious.com/recipes/food/views/vegetarian-three-bean-chili" target="_blank"><img class="chili-image" src="https://assets.epicurious.com/photos/5a049a81f819553e017bd97f/1:1/w_1920%2Cc_limit/google-express-Bean-Chili-110317.jpg" alt="Bean Chili"></a></td>
+                </tr>
+                <tr>
+                    <td>Sweet potatoes almost melt as they cook under pressure in the Instant Pot, lending a silky texture and sweet flavor to this harissa-spiced chili.</td>
+                    <td>Skip that dusty bottle of chili powder. Instead, soak and purée whole dried chiles to stir into this authentic Texas beef stew.</td>
+                    <td>With the help of a few pantry staples, you can get all the flavors of slow-simmered chili in just 30 minutes.</td>
+                </tr>
+            </table>
         </div>
     </section>
 
