Completed Exercise #3 of CSS Flexbox In Practice.

--- a/html/conditionals.html
+++ b/html/conditionals.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Conditionals JS</title>
+    <title>JS Conditionals</title>
 </head>
 <body>
     <script src="../js/conditionals.js"></script>
