Updated and modified Chili Website. Added a navigation bar and more styling.

--- a/html/in-class-chili-website-exercise.html
+++ b/html/in-class-chili-website-exercise.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="../css/chili-website-exercise.css">
 </head>
 <body>
+
+    <nav>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href=""><img class="chili-logo" src="https://cdn.dribbble.com/users/1643818/screenshots/6169931/media/72abfc2cbceb64589b84c8ea651d43fc.png" alt="Chili Logo"></a></li>
+            <li><a href="">Follow Us</a></li>
+        </ul>
+    </nav>
+
     <header>
         <h1 class="h1-header">The Ultimate Chili Spot!</h1>
     </header>
