--- a/html/flexbox-nav-exercise.html
+++ b/html/flexbox-nav-exercise.html
@@ -12,15 +12,33 @@
 <body>
     <nav>
         <ul class="container">
-            <li><a href="">Articles</a></li>
-            <li><a href="">Products</a></li>
-            <li><a href="">Market</a></li>
-            <li><a href="">Jobs</a></li>
-            <li class="logo-item"><a class="logo" href="">Logo</a></li>
-            <li><a href="">Follow Us</a></li>
-            <li><a href=""><i class="fas fa-search"></i></a></li>
-            <li><a href=""><i class="fas fa-shopping-cart"></i></a></li>
-            <li><a href=""><i class="fas fa-user-circle"></i></a></li>
+            <li>
+                <a href="">Articles</a>
+            </li>
+            <li>
+                <a href="">Products</a>
+            </li>
+            <li>
+                <a href="">Market</a>
+            </li>
+            <li>
+                <a href="">Jobs</a>
+            </li>
+            <li class="logo-item">
+                <a class="logo" href="">Logo</a>
+            </li>
+            <li>
+                <a href="">Follow Us</a>
+            </li>
+            <li>
+                <a href=""><i class="fas fa-search"></i></a>
+            </li>
+            <li>
+                <a href=""><i class="fas fa-shopping-cart"></i></a>
+            </li>
+            <li>
+                <a href=""><i class="fas fa-user-circle"></i></a>
+            </li>
         </ul>
     </nav>
 </body>
