--- a/html/order-pizza.html
+++ b/html/order-pizza.html
@@ -7,7 +7,7 @@
     <title>Bootstrap Introduction</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
-    <!-- Your custom css styles go here -->
+    <link rel="stylesheet" href="../css/custom.css">
 </head>
 <body>
 <!-- Main page content -->
@@ -39,7 +39,14 @@
 </nav>
 
 <div class="container-fluid">
-<!--Content Here-->
+
+    <div class="jumbotron jumbotron-fluid .d-sm-none .d-md-block">
+        <div class="container">
+            <h1 class="display-4">Welcome to Pizza World!</h1>
+            <p class="lead"></p>
+        </div>
+    </div>
+
 </div>
 
 
