Continued working on CSS Bootstrap Introduction Exercise.

--- a/html/order-pizza.html
+++ b/html/order-pizza.html
@@ -47,6 +47,49 @@
         </div>
     </div>
 
+    <h2>Build your own pizza!</h2>
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link active" href="#"><span class="badge-pill badge-light">1</span> Size and Crust</a>
+            <div class="card">
+                <div class="card-header">
+                    Choose Size and Crust
+                </div>
+                <div class="card-body">
+                    <div class="card">
+                        <h5 class="card-header" style="background-color:lightgray;color:black">Hand Tossed</h5>
+                        <div class="card-body">
+                            <p class="card-text">Garlic seasoned crust with a rich, buttery taste.</p>
+                            <ul class="list-group">
+                                <li class="list-group-item"><input type="radio" aria-label="Radio button for following text input"> Small (10")</li>
+                                <li class="list-group-item"><input type="radio" aria-label="Radio button for following text input">  Medium (12")</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card" style="margin:10px 0;">
+                        <h5 class="card-header" style="background-color:lightgray;color:black;">Crispy Thin</h5>
+                        <div class="card-body">
+                            <p class="card-text">Thin enough for optimum crispy to crunchy ratio.</p>
+                            <ul class="list-group">
+                                <li class="list-group-item"><input type="radio" aria-label="Radio button for following text input"> Medium (12")</li>
+                                <li class="list-group-item"><input type="radio" aria-label="Radio button for following text input"> Large (14")</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="text-right">
+                        <a href="#" class="btn btn-primary">Next Step ></a>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#"><span class="badge-pill badge-light">2</span> Cheese and Sauce</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#"><span class="badge-pill badge-light">3</span> Toppings</a>
+        </li>
+    </ul>
+
 </div>
 
 
