Completed Toppings tab.

--- a/html/order-pizza.html
+++ b/html/order-pizza.html
@@ -82,6 +82,7 @@
                 </div>
             </div>
         </li>
+
         <li class="nav-item">
             <a class="nav-link" href="#"><span class="badge-pill badge-light">2</span> Cheese and Sauce</a>
             <div class="card">
@@ -133,8 +134,37 @@
                 </div>
             </div>
         </li>
+
         <li class="nav-item">
             <a class="nav-link" href="#"><span class="badge-pill badge-light">3</span> Toppings</a>
+            <div class="card">
+                <div class="card-header">
+                    Choose Toppings
+                </div>
+                <div class="card-body">
+                    <div class="card">
+                        <h5 class="card-header" style="background-color:lightgray;color:black">Choose Meats</h5>
+                        <ul class="list-group">
+                            <li class="list-group-item"><input type="checkbox" aria-label="Checkbox for following text input"> Beef</li>
+                            <li class="list-group-item"><input type="checkbox" aria-label="Checkbox for following text input" > Ham</li>
+                            <li class="list-group-item"><input type="checkbox" aria-label="Checkbox for following text input"> Philly Steak</li>
+                            <li class="list-group-item"><input type="checkbox" aria-label="Checkbox for following text input"> Bacon</li>
+                        </ul>
+                    </div>
+                    <div class="card" style="margin:10px 0;">
+                        <h5 class="card-header" style="background-color:lightgray;color:black;">Choose Non-Meats</h5>
+                        <ul class="list-group">
+                            <li class="list-group-item"><input type="checkbox" aria-label="Checkbox for following text input"> Green Peppers</li>
+                            <li class="list-group-item"><input type="checkbox" aria-label="Checkbox for following text input" > Mushrooms</li>
+                            <li class="list-group-item"><input type="checkbox" aria-label="Checkbox for following text input"> Onions</li>
+                            <li class="list-group-item"><input type="checkbox" aria-label="Checkbox for following text input"> Jalapeño Peppers</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="text-right card-footer">
+                    <a href="#" class="btn btn-primary">Checkout</a>
+                </div>
+            </div>
         </li>
     </ul>
 
@@ -143,5 +173,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <!-- Your custom JS goes here -->
+
 </body>
 </html>
