--- a/html/order-pizza.html
+++ b/html/order-pizza.html
@@ -49,7 +49,8 @@
     </div>
 
     <h2>Build your own pizza!</h2>
-    <!-- Code for user interaction of tabs starts here -->
+    <!-- Code for user interaction of build your own pizza tabs starts here -->
+    <!-- Code for the titles of the navigation tabs is from lines 54 to 64 -->
     <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
             <a class="nav-link active" id="size-and-crust-tab" data-toggle="tab" href="#size-and-crust" role="tab" aria-controls="size-and-crust" aria-selected="true"><span class="badge-pill badge-light">1</span> Size and Crust</a>
@@ -179,7 +180,7 @@
     </div>
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> <!-- Link for JQuery which activates user interaction for the build your own pizza tabs -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <!-- Your custom JS goes here -->
 
