--- a/html/bootstrap-grid-system.html
+++ b/html/bootstrap-grid-system.html
@@ -47,6 +47,100 @@
     <hr>
 </header>
 
+<main>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="row">
+                    <h4>SKILLS AND ABILITIES</h4>
+                </div>
+                <div class="row">
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>Bootstrap</li>
+                    </ul>
+                </div>
+                <br>
+                <div class="row">
+                    <h4>ACADEMIC</h4>
+                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                </div>
+                <br>
+                <div class="row">
+                    <h4>PROFESSIONAL EXPERIENCE</h4>
+                </div>
+                <div class="row">
+                    <div>Job 2</div>
+                </div>
+                <br>
+                <div class="row">
+                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                </div>
+                <br>
+                <div class="row">
+                    <div>Job 1</div>
+                </div>
+                <br>
+                <div class="row">
+                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                </div>
+                <br>
+            </div>
+
+            <div class="w-100 d-none d-md-block"></div>
+
+            <div class="col-md-8">
+                <div class="row">
+                    <h4>DEVELOPMENT PROJECTS</h4>
+                </div>
+                <div class="row">
+                    <div>Project 3</div>
+                </div>
+                <br>
+                <div class="row">
+                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                </div>
+                <br>
+                <div class="row">
+                    <div>Project 2</div>
+                </div>
+                <br>
+                <div class="row">
+                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                </div>
+                <br>
+                <div class="row">
+                    <div>Project 1</div>
+                </div>
+                <br>
+                <div class="row">
+                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                </div>
+                <br>
+                <div class="row">
+                    <h4>AWARDS AND INVOLVEMENT</h4>
+                </div>
+                <div class="row">
+                    <div>AWARD 1</div>
+                </div>
+                <br>
+                <div class="row">
+                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                </div>
+                <br>
+                <div class="row">
+                    <div>INVOLVEMENT 1</div>
+                </div>
+                <br>
+                <div class="row">
+                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
