--- a/html/bootstrap-grid-system.html
+++ b/html/bootstrap-grid-system.html
@@ -50,7 +50,7 @@
 <main>
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-4">
                 <div class="row">
                     <h4>SKILLS AND ABILITIES</h4>
                 </div>
@@ -65,7 +65,7 @@
                 <br>
                 <div class="row">
                     <h4>ACADEMIC</h4>
-                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                    <div>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit, sed do eiusmod tempor<br> incididunt ut labore et dolore magna aliqua.</div>
                 </div>
                 <br>
                 <div class="row">
@@ -76,7 +76,7 @@
                 </div>
                 <br>
                 <div class="row">
-                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                    <div>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit, sed do eiusmod tempor<br> incididunt ut labore et dolore magna aliqua.</div>
                 </div>
                 <br>
                 <div class="row">
@@ -84,14 +84,12 @@
                 </div>
                 <br>
                 <div class="row">
-                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                    <div>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit, sed do eiusmod tempor<br> incididunt ut labore et dolore magna aliqua.</div>
                 </div>
                 <br>
             </div>
 
-            <div class="w-100 d-none d-md-block"></div>
-
-            <div class="col-md-8">
+            <div class="col-8">
                 <div class="row">
                     <h4>DEVELOPMENT PROJECTS</h4>
                 </div>
@@ -141,7 +139,6 @@
         </div>
     </div>
 </main>
-
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <!-- Your custom JS goes here -->
